# dsd2dxd

./: .gitignore  .gitmodules  1kHz.dsf  1kHz_mono_brokenid3.dsf  1kHz_stereo_128.dsf  1kHz_stereo_i.dsd  Cargo.toml  ConversionContext.cpp  ConversionContext.hpp  Dither.hpp  Input.hpp  Output.hpp  README.md  argagg.hpp  bench_speed.sh  build.rs  build_test_mono.ps1  build_test_mono.sh  build_test_stereo.ps1  build_test_stereo.sh  build_test_stereo_flt.ps1  build_test_stereo_flt.sh  butterworth_design.py  diffile  dsd2pcm  dsd2pcm.c  dsd2pcm.h  dsd2pcm.hpp  dsdiff.c  dsdin.c  dsdin.h  dsdin.hpp  dsf.c  equiripple_design.py  filter_lib.py  info.txt  main.cpp  main_loop_ex.txt  make_impulse_mono.py  noiseshape.c  (+9 more)
.cargo/: config.toml
id3_test/: 1kHz_stereo_i_brokenid3.dff
id3_test/dff/: 1kHz_stereo_i.dff
src/: audio_file.rs  byte_precalc_decimator.rs  color_logger.rs  conversion_context.rs  dither.rs  dsd.rs  dsd2pcm.rs  dsd2pcm_sys.rs  dsdin_sys.rs  filters.rs  filters_lm.rs  fir_convolve.rs  input.rs  lib.rs  lm_resampler.rs  main.rs  model.rs  output.rs
src/dsf/: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  TODO.md
src/dsf/doc/images/: logo.xcf
src/dsf/src/: id3_display.rs  lib.rs
test/: 1kHz_mono_128.dsf  1kHz_mono_p.dsd  impulse_mono_toggle.dsd  pinknoise_mono_128.dsf  pinknoise_stereo_128.dsf
