[package]
name = "dsd2dxd"
version = "2.3.4"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive", "wrap_help"] }
rdsd2pcm = { path = "src/rdsd2pcm/" }
log = { version = "0.4.28", features = ["std"] }
colored = "3.0.0"
tokio = { version = "1.48.0", features = ["rt", "macros", "rt-multi-thread"] }