[package]
name = "dsd2dxd"
version = "2.4.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive", "wrap_help"] }
rdsd2pcm = { path = "src/rdsd2pcm/" }
log = { version = "0.4.28", features = ["std"] }
colored = "3.0.0"
indicatif = "0.18.3"
indicatif-log-bridge = "0.2.3"
rayon = "1.10.0"